--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://pablo.gomes.nz" # the base hostname & protocol for your site
 github_username:  gomesp
+twitter_username: pablogl
 
 # Build settings
 markdown: kramdown
