--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ theme: minima
 plugins:
   - jekyll-feed
 
-include: [ "/.well-known" ]
+# include: [ "/.well-known" ]
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
